--- a/src/component/Navbar/Navbar.scss
+++ b/src/component/Navbar/Navbar.scss
@@ -1,18 +1,36 @@
 .Navbar {
   background-color: #644d46;
+  height: 10vh;
 
   &__wrapper {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
     max-width: 1260px;
+    height: 100%;
     margin: auto;
+
+    &__logo {
+      height: 100%;
+      display: flex;
+      align-items: center;
+    }
   }
 
   &__links {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    gap: 40px;
+    gap: 20px;
+
+    &__link {
+      width: 100px;
+      height: 34px;
+
+      &--login {
+        border-radius: 5px;
+    }
+    }
   }
 }
