--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,46 @@
+@import url('https://fonts.googleapis.com/css2?family=Goudy+Bookletter+1911&family=Noto+Sans:ital,wght@0,200;0,400;0,600;0,700;1,200;1,400&display=swap');
+
+:root {
+  --noto: "Noto Sans", sans-serif;
+  --bookletter: "Goudy Bookletter 1911", serif;
+
+  --color-primary: #644D46;
+  --color-white: #FFFFFF;
+  --color-text: #363636;
+}
+
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  font-family: var(--noto);
+  font-weight: 400;
+  font-size: 16px;
+  color: var(--color-text);
+}
+
+h1 {
+  font-size: 52px;
+  font-weight: 700;
+}
+
+h2 {
+  font-size: 32px;
+  font-weight: 700;
+}
+
+h3 {
+  font-size: 24px;
+  font-weight: 600;
+}
+
+h4 {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+p {
+  font-size: 16px;
+  font-weight: 200;
 }
 
 code {
