--- a/src/component/Navbar/Navbar.scss
+++ b/src/component/Navbar/Navbar.scss
@@ -15,6 +15,11 @@
       height: 100%;
       display: flex;
       align-items: center;
+
+      & #logo {
+        height: 80%;
+        width: auto;
+      }
     }
   }
 
@@ -27,10 +32,46 @@
     &__link {
       width: 100px;
       height: 34px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      & a {
+        color: var(--color-anti-flash-white);
+      }
 
       &--login {
         border-radius: 5px;
+        width: 100px;
+        background-color: var(--color-anti-flash-white);
+        border-style: solid;
+        
+        & a {
+          color: var(--color-jet);
+          font-size: 16px;
+        }
+      }
+
+      &--login:hover {
+        background-color: var(--color-liver);
+        border-color: var(--color-anti-flash-white);
+
+        & a {
+          color: var(--color-anti-flash-white);
+        }
+      }
     }
+
+    &__link:hover {
+      background-color: var(--color-anti-flash-white);
+
+      & a {
+        color: var(--color-jet);
+      }
     }
   }
+}
+
+a {
+  text-decoration: none;
 }
