replaced colors by global variables

--- a/src/index.scss
+++ b/src/index.scss
@@ -4,9 +4,10 @@
   --noto: "Noto Sans", sans-serif;
   --bookletter: "Goudy Bookletter 1911", serif;
 
-  --color-primary: #644D46;
-  --color-white: #FFFFFF;
-  --color-text: #363636;
+  --color-liver: #644D46;
+  --color-silver: #CECBCB;
+  --color-anti-flash-white: #EDEDED;
+  --color-jet: #363636;
 }
 
 
