--- a/src/SearchBar/SearchBar.scss
+++ b/src/SearchBar/SearchBar.scss
@@ -16,12 +16,12 @@
     border-radius: 1rem;
     padding: .5rem 3rem;
     width: 90%;
-    background-color: #D9D9D9;
+    background-color: var(--color-silver);
     font-size: 16px;
-    box-shadow: 0px 1px 3px #D9D9D9;
+    box-shadow: 0px 1px 3px var(--color-silver);
   
     &::placeholder {
-        color: var(--color-white);
+        color: var(--color-anti-flash-white);
       }
   }
 
@@ -30,6 +30,6 @@
     top: 50%;
     left: 0%;
     transform: translate(100%, -50%);
-    fill: var(--color-white);
+    fill: var(--color-anti-flash-white);
   }
 }
