--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,7 @@ body {
   font-family: var(--noto);
   font-weight: 400;
   font-size: 16px;
+  background-color: var(--color-silver);
   color: var(--color-jet);
 }
 
