--- a/src/components/BookCard/BookCard.scss
+++ b/src/components/BookCard/BookCard.scss
@@ -2,17 +2,18 @@
   box-sizing: border-box;
   display: flex;
   flex-direction: row;
-  width: 27em;
+  width: 28em;
   height: 20em;
   box-shadow: 0px 1px 3px var(--color-silver);
   gap: 1rem;
+  background-color: var(--color-anti-flash-white);
 
   &__image {
     height: 20em;
     img {
-      width: auto;
+      width: 14em;
       height: 20em;
-      object-fit: cover;
+      object-fit: fit;
     }
   }
 
@@ -30,19 +31,17 @@
       margin: 0;
     }
 
-    &__author {
+    &__author {<
       margin: 0;
       li {
         list-style: none;
       }
     }
-    
     }
 
     &__links {
       display: flex;
       justify-content: space-between;
-
 
         &__borrow { 
           text-decoration: none;
@@ -56,7 +55,7 @@
         
         svg {
           fill: var(--color-liver);
-          transform: translateY(30%);
+          transform: translate(-30%, 30%);
           scale: 2;
           cursor: pointer;
         }
