--- a/src/container/RegistrationForm/RegistrationForm.scss
+++ b/src/container/RegistrationForm/RegistrationForm.scss
@@ -11,6 +11,16 @@
     flex-direction: column;
     gap: 30px;
 
+    &__wrapper {
+        position: relative;
+
+        svg {
+            position: absolute;
+            left: 8px;
+            top: 30%;
+        }
+    }
+
     &__inputs {
         display: flex;
         flex-direction: column;
@@ -47,3 +57,4 @@
     }
   }
 }
+
