--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -1,22 +1,59 @@
 .LoginForm {
-    margin: auto;
-    width: 30%;
-    min-width: 390px;
+  margin: auto;
+  width: 20%;
+  min-width: 390px;
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+
+  &__form {
     display: flex;
     flex-direction: column;
+    gap: 30px;
 
-    &__form {
+    &__wrapper {
+      position: relative;
+
+      svg {
+        position: absolute;
+        left: 10px;
+        top: 30%;
+      }
+    }
+
+    &__inputs {
         display: flex;
         flex-direction: column;
         gap: 10px;
-
-        &__input {
-             height: 30px;
-             width: 100%;
-
-             &-button {
-                width: 102% ;
-             }
-        }
     }
-}
+
+    &__input {
+      height: 45px;
+      width: 100%;
+      border-radius: 45px;
+      border: none;
+      box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+      padding: 0 40px 0 40px;
+      
+
+      &-button {
+        margin-top: 20px;
+        width: 30%;
+        margin: auto;
+        text-transform: uppercase;
+        letter-spacing: 2.5px;
+        cursor: pointer;
+        outline: none;
+        transition: all 0.3s ease 0s;
+        padding: 0;
+      }
+
+      &-button:hover {
+        background-color: var(--color-liver);
+        color: var(--color-anti-flash-white);
+        box-shadow: 0px 15px 20px var(--color-liver);
+        transform: translateY(-7px);
+      }
+    }
+    }
+  }
