--- a/src/components/LoginForm/LoginForm.scss
+++ b/src/components/LoginForm/LoginForm.scss
@@ -1,5 +1,5 @@
 .LoginForm {
-  margin: auto;
+  margin: 20px auto;
   width: 20%;
   min-width: 390px;
   display: flex;
@@ -7,6 +7,7 @@
   text-align: center;
 
   &__form {
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     gap: 30px;
@@ -22,9 +23,9 @@
     }
 
     &__inputs {
-        display: flex;
-        flex-direction: column;
-        gap: 10px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
     }
 
     &__input {
@@ -34,7 +35,6 @@
       border: none;
       box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
       padding: 0 40px 0 40px;
-      
 
       &-button {
         margin-top: 20px;
@@ -55,5 +55,5 @@
         transform: translateY(-7px);
       }
     }
-    }
   }
+}
