--- a/src/container/RegistrationForm/RegistrationForm.scss
+++ b/src/container/RegistrationForm/RegistrationForm.scss
@@ -1,5 +1,5 @@
 .RegistrationForm {
-  margin: auto;
+  margin: 20px auto;
   width: 20%;
   min-width: 390px;
   display: flex;
@@ -7,6 +7,7 @@
   text-align: center;
 
   &__form {
+    margin-top: 20px;
     display: flex;
     flex-direction: column;
     gap: 30px;
