--- a/src/components/BookCard/BookCard.scss
+++ b/src/components/BookCard/BookCard.scss
@@ -10,6 +10,7 @@
 
   &__image {
     height: 20em;
+    flex: 1;
     img {
       width: 14em;
       height: 20em;
@@ -18,6 +19,7 @@
   }
 
   &__info {
+    flex: 1;
     color: var(--color-jet);
     min-width: 42%;
     padding: 15px 5px;
@@ -55,7 +57,7 @@
         
         svg {
           fill: var(--color-liver);
-          transform: translate(-30%, 30%);
+          transform: translate(-50%, 30%);
           scale: 2;
           cursor: pointer;
         }
