--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -9,13 +9,21 @@
     margin-bottom: 1rem;
 
     &__button {
-    border-radius: 5px;
+    border-radius: 0 0 5px;
     width: 100px;
     background-color: var(--color-anti-flash-white);
     border-style: solid;
+    border-color: var(--color-liver);
     color: var(--color-jet);
     font-size: 16px;
+      
+      &:first-child {
+        border-radius: 5px 0 0 5px; 
+      }
 
+      &:last-child {
+        border-radius: 0 5px 5px 0; 
+      }
       &--active {
         background-color: var(--color-liver);
         color: var( --color-silver);
@@ -41,4 +49,5 @@
       flex-wrap: wrap;  
     }
   }
+
 }
