--- a/src/components/BookCard/BookCard.scss
+++ b/src/components/BookCard/BookCard.scss
@@ -5,7 +5,7 @@
   width: 28em;
   height: 20em;
   box-shadow: 0px 1px 3px var(--color-silver);
-  gap: 1rem;
+  // gap: 1rem;npm
   background-color: var(--color-anti-flash-white);
 
   &__image {
@@ -21,49 +21,65 @@
     width: 14em;
     color: var(--color-jet);
     min-width: 42%;
-    padding: 15px 5px;
+    padding: 15px 25px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-  
 
-    &__title{
+    &__title {
+      display: -webkit-box;
+      -webkit-line-clamp: 4;
+      -webkit-box-orient: vertical;
+      max-height: 175px;
+      width: 174px;
+      word-wrap: normal;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: wrap;
+      overflow-wrap: break-word;
       color: var(--color-jet);
       margin: 0;
     }
 
     &__author {
+      display: -webkit-box;
+      -webkit-line-clamp: 2;
+      -webkit-box-orient: vertical;
+      width: 174px;
+      word-wrap: normal;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: wrap;
       margin: 0;
       li {
         list-style: none;
       }
     }
-    }
-
-    &__links {
-      display: flex;
-      justify-content: space-between;
-
-        &__borrow { 
-          text-decoration: none;
-          display: inline-block;
-          padding: 5px 15px;
-          background-color: var(--color-liver);
-          border-radius: 0.5em;
-          color: var(--color-anti-flash-white);
-          cursor: pointer;
-        }
-        
-        svg {
-          fill: var(--color-liver);
-          transform: translate(-30%, 30%);
-          scale: 2;
-          cursor: pointer;
-        }
-        &__borrow:hover, svg:hover {
-          opacity: .5;
-        }
-    }
-  
   }
 
+  &__links {
+    display: flex;
+    justify-content: space-between;
+
+    &__borrow {
+      text-decoration: none;
+      display: inline-block;
+      padding: 5px 15px;
+      background-color: var(--color-liver);
+      border-radius: 0.5em;
+      color: var(--color-anti-flash-white);
+      cursor: pointer;
+    }
+
+    svg {
+      fill: var(--color-liver);
+      transform: translate(-30%, 30%);
+      scale: 2;
+      cursor: pointer;
+    }
+    &__borrow:hover,
+    svg:hover {
+      opacity: 0.5;
+    }
+  }
+}
