changed Personal information display and added title 10 newest releases to landing page

--- a/src/components/Main/Main.scss
+++ b/src/components/Main/Main.scss
@@ -7,7 +7,17 @@
   min-height: 80vh;
   margin: auto;
   display: flex;
-  gap: 59px;
-  justify-content: space-between;
-  flex-wrap: wrap;
+  flex-direction: column;
+  gap: 40px;
+
+  &__title {
+    text-align: center;
+  }
+
+  &__books {
+    display: flex;
+    gap: 59px;
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
 }
