--- a/src/components/UserProfile/UserProfile.scss
+++ b/src/components/UserProfile/UserProfile.scss
@@ -88,7 +88,15 @@
     }
 
     &__infos {
-      margin: 30px 0;
+      margin: 30px auto;
+      
+      &__bold {
+        font-weight: 700;
+      }
+
+      &__cursive {
+        font-style: italic;
+      }
     }
   }
 }
